Bug 1620941 - Cleanup nsDOMWindowUtils::NodesFromRect. r=mconley

Differential Revision: https://phabricator.services.mozilla.com/D66403